--- a/index.html
+++ b/index.html
@@ -120,6 +120,34 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">PassionOverPain♠</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/tinotenda-mhedziso/" target="_blank">@TinoMhedziso</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/PassionOverPain" target="_blank">@PassionOverPain</a>
+          </p>
+          <p class="about">Hey There! Im Tino😎: A Bachelor of Information Technology student who adores everything Tech🐱‍👤,Gaming⚔ and Anime♠. I have grown a loving community of Tech NERDS on LinkedIn and would love to do so on Github.#FollowMeOnThisJourney😄</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.vecteezy.com/" target="_blank" title="Vecteezy is a website that contains a warehouse of free high resolution stock images to use in your Web development journey.">Vecteezy</a>
+              </li>
+              <li>
+                <a href="https://www.figma.com/" target="_blank" title="You probably know of Figma, if not, today is your lucky day: Figma is a collarative web application used for wireframing,web design and prototyping with little to no code experience📜.">Figma</a>
+              </li>
+              <li>
+                <a href="https://www.gencraft.com" target="_blank" title="Simplistic but special interface, easy to use prompts and an AI models that really understand you: Gencraft is an AI Art and Video Generator">Gencraft</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Aaditya Shirke</p>
