Aaditya-card-remake

--- a/index.html
+++ b/index.html
@@ -125,22 +125,23 @@
           <p class="name">Aaditya Shirke</p>
           <p class="contact">
             <i class="fab fa-LinkedIn"></i>
-            <a href="https://www.linkedin.com/in/aaditya-shirke-b29791292/" target="_blank">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/aaditya-shirke-b29791292/" target="_blank">@LinkedIn</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/Aadii-01" target="_blank">GitHub</a>
+            <a href="https://github.com/Aadii-01" target="_blank">@GitHub</a>
           </p>
-          <p class="about">FY BTech IT undergrad</p>
+          <p class="about">Hello, I'm a student developer (SY BTech IT) 
+            😎.<br>New to Open-source, have interest in web dev and programming too.<br>Feel free to connect me! 🙌</p>
           <div class="resources">
-            <p>3 Useful Dev Resources</p>
+            <p>I hope you find these resoures useful 😃</p>
             <ul>
               <li>
-                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3Schools</a>
+                <a href="https://roadmap.sh/" target="_blank" title="First Resource">Developer's roadmap</a>
               </li>
               <li>
-                <a href="https://www.youtube.com/" target="_blank" title="Second resource">YouTube</a>
+                <a href="https://stackoverflow.com" target="_blank" title="Second resource">Stack Overflow</a>
               </li>
               <li>
-                <a href="https://medium.com/" target="_blank" title="Third Resource">Medium</a>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Third Resource">FreeCodeCamp</a>
               </li>
             </ul>
           </div>
