--- a/index.html
+++ b/index.html
@@ -232,6 +232,8 @@
         </div>
         <!-- ________ *Lanthoiba* Contributor card END ________  -->
 
+        
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
 
         <div class="card">
@@ -335,6 +337,36 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *shreyassn* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Shreyas S N</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/shreyassn/" target="_blank">
+              SHREYAS S N
+            </a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/shreyassn" target="_blank">shreyassn</a>
+          </p>
+          <p class="about">B tech in CSE from India Looking for Job in core field</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="First Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://medium.com/" target="_blank" title="Second Resource">Medium</a>
+              </li>
+              <li>
+                <a href="https://www.youtube.com/" target="_blank" title="Third resource">YouTube</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *shreyassn* Contributor card END ________  -->
+
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
