adding my card to repo

--- a/index.html
+++ b/index.html
@@ -123,6 +123,30 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Darryl 'Ryuujisan32' Williams</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://x.com/thedeewilliams" target="_blank">The artist formally known as twitter:</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/DarrylWilliams32" target="_blank">Check my Github!</a>
+          </p>
+          <p class="about">Guitar, code, video games, and getting swole. Oh, and I'm also a Dad? Probably should have led with that.</p>
+          <div class="resources">
+            <p>3 of my must have tools</p>
+            <ul>
+              <li>
+                <a href="https://www.amazon.com/" target="_blank" title="First Resource">The perfect place to bookmark books and then buy somewhere else</a>
+              </li>
+              <li>
+                <a href="https://overapi.com/" target="_blank" title="Second Resource">Robust collection of cheat sheets</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Third resource">Best FREE resource to learn to code</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
           <p class="name">PassionOverPain♠</p>
           <p class="contact">
             <i class="fa-brands fa-linkedin"></i>
