--- a/index.html
+++ b/index.html
@@ -146,6 +146,9 @@
             </ul>
           </div>
         </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+        
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">PassionOverPain♠</p>
           <p class="contact">
