--- a/index.html
+++ b/index.html
@@ -121,6 +121,33 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ *A T M FOKRULE HASAN:* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">A T M FOKRULE HASAN</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/fokrule/" target="_blank">Linkedin</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/fokrule/" target="_blank">GitHub</a>
+          </p>
+          <p class="about">Software Engineer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Freecodecamp">Freecodecamp</a>
+              </li>
+              <li>
+                <a href="https://devdocs.io/" target="_blank" title="Dev docs">Dev docs</a>
+              </li>
+              <li>
+                <a href="https://developer.mozilla.org/" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *A T M FOKRULE HASAN* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Darryl 'Ryuujisan32' Williams</p>
