--- a/index.html
+++ b/index.html
@@ -113,6 +113,39 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
+        <!-- ================================================ -->
+        <!-- ==================  TEMPLATE  ================== -->
+        <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Faruk Idris</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/farukidris_" target="_blank">
+              @farukidris_
+            </a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/farooq13" target="_blank">farooq13</a>
+          </p>
+          <p class="about">full-stack developer | Open-source contributor</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com" target="_blank" title="First Resource">GitHub</a>
+              </li>
+              <li>
+                <a href="https://youtu.be/hrTQipWp6co?si=7zjeZksnfxBs1oyA" target="_blank" title="Second Resource">SuperSimpleDev</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Third resource">StackOverFlow</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- COPY everything ABOVE this, from contributor card start to end along with the "START" and "END" comment lines -->
         <!-- ============== ^^^^ TEMPLATE ^^^^ ============== -->
         <!-- ================================================ -->
