--- a/index.html
+++ b/index.html
@@ -155,6 +155,36 @@
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
         <!-- ________ *A T M FOKRULE HASAN:* Contributor card START ________  -->
+
+
+        <div class="card">
+          <p class="name">Shyam Bista</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/shyam-bista-4119bb240/" target="_blank">Linkedin</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/shyambista123/" target="_blank">GitHub</a>
+          </p>
+          <p class="about">Software Developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://free-for.dev/" target="_blank" title="FreeForDev">Free For Dev</a>
+              </li>
+              <li>
+                <a href="https://www.datacamp.com/" target="_blank" title="DataCamp">DataCamp</a>
+              </li>
+              <li>
+                <a href="https://you.com/" target="_blank" title="You.com">You.com</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+
+
+
         <div class="card">
           <p class="name">A T M FOKRULE HASAN</p>
           <p class="contact">
