Github handle added

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <p class="name">Sudiksha</p>
           <p class="contact">
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/SudikshaG" target="_blank">Your handle</a>
+            <a href="https://www.github.com/SudikshaG" target="_blank">SudikshaG</a>
           </p>
           <p class="about">Hey there! I am a student of Computer Science and Engineering. I am interested in Web Dev, cybersecurity
             and Machine Learning. I am new to open-source and want to learn more. </p>
