--- a/index.html
+++ b/index.html
@@ -115,6 +115,32 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+    <!-- ________ *Olubimi Michael card START ________  -->
+    <div class="card">
+      <p class="name">Olubimi Michael</p>
+      <p class="contact">
+        <i class="fab fa-github"></i>
+        <a href="https://github.com/Hollumidhe" target="_blank">Hollumidhe</a>
+      </p>
+      <p class="about">Hi, My name is Olubimi. Starting a career in cloud computing also
+         interested in Devops, cybersecurity and Python.</p>
+      <div class="resources">
+        <p>3 Useful Dev Resources</p>
+        <ul>
+          <li>
+            <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">freeCodeCamp</a>
+          </li>
+          <li>
+            <a href="https://udemy.com" target="_blank" title="Second Resource">Udemy</a>
+          </li>
+          <li>
+            <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third resource">Greeks for Greeks</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- ________ Olubimi Michael card END ________  -->
+    
          <!-- ________ Arjun card START ________  -->
          <div class="card">
           <p class="name">Arjun</p>
@@ -3603,6 +3629,9 @@
 
         </div>
         <!-- ________ Mariana Martins' card END ________  -->
+
+         
+
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
