--- a/index.html
+++ b/index.html
@@ -123,6 +123,36 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Doha</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/doha-ennachi/" target="_blank">@doha-ennachi</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/d0h24" target="_blank">@d0h24</a>
+          </p>
+          <p class="about">
+            👩‍💻 Software developer and Google IT Support Specialist <br>
+            👩‍🎓 Studied Economic Sciences and Management & Software Development <br>
+            🌱 I’m currently learning new technologies in web development</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/" target="_blank" title="GitHub">GitHub</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="freecodecamp">freecodecamp</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com" target="_blank" title="Stack Overflow">Stack Overflow</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
           <p class="name">Darryl 'Ryuujisan32' Williams</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
