Add edmondprin card info

--- a/index.html
+++ b/index.html
@@ -2646,8 +2646,32 @@
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
-         
-
+<!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Edmond</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.x.com/edmondprin" target="_blank">My Twitter</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/edmondprin" target="_blank">My GitHub</a>
+          </p>
+          <p class="about">I am learning frontend web development and have some knowledge of Python</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://developer.mozilla.org" target="_blank" title="First Resource">Mozilla</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org" target="_blank" title="Second Resource">Geeks For Geeks</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com" target="_blank" title="Third resource">w3 Schools</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+<!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- <<<<< Do not change anything below this line >>>>> -->
         <!-- -------------------------------------------------- -->
