--- a/index.html
+++ b/index.html
@@ -296,13 +296,13 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">LeetCode</a>
+                <a href="https://leetcode.com/" target="_blank" title="First Resource">LeetCode</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Dev.to</a>
+                <a href="https://dev.to/" target="_blank" title="Second Resource">Dev.to</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Medium</a>
+                <a href="https://medium.com/" target="_blank" title="Third resource">Medium</a>
               </li>
             </ul>
           </div>
