--- a/index.html
+++ b/index.html
@@ -175,6 +175,61 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+                <!-- ________ *TEMPLATE:  Ann Mukami card START ________  -->
+        <div class="card">
+          <p class="name">Ann Mukami Kiunga</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://twitter.com/AnnKiungaa" target="_blank">@AnnKiungaa</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Kiunga1" target="_blank">Kiunga1</a>
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/ann-mukami/" target="_blank">Ann Mukami</a>
+          </p>
+          <p class="about">Motivated Front-End Developer seeking to leverage proven skills in modern web development technologies to drive user engagement and conversion.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.theodinproject.com/" target="_blank" title="First Resource">The Odin Project</a>
+              </li>
+              <li>
+                <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3Schools</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Third resource">Free Code Camp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* END of card______  -->
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">Faruk Idris</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/farukidris" target="_blank">Faruk Idris</a>
+          </p>
+          <p class="about">Hi, I'm Faruk. I love coding and contributing to open source projects.</p>
+          <div class="resources">
+            <p>3 Useful Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.udemy.com/" target="_blank" title="Second Resource">Udemy</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third Resource">Geeks for Geeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card END ________  -->
+
+
+
         <!-- ________ *A T M FOKRULE HASAN:* Contributor card START ________  -->
 
         <div class="card">
