--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Lucas Americo</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
             <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/LucasAmerico0101" target="_blank">Your handle</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">Hello i am Lucas. I am web developer </p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="#" target="_blank" title="First Resource">Best Coding server for Brazil https://discord.com/servers/ballerini-789888698673922078</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="#" target="_blank" title="Second Resource">Second best coding server for Brazil https://discord.gg/GnfuzSUx</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="#" target="_blank" title="Third resource">best hacker channel for Brazil https://youtube.com/canalguiaanonima</a>
               </li>
             </ul>
           </div>
