--- a/index.html
+++ b/index.html
@@ -175,85 +175,82 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
-        <!-- ________ *tobilobasalawu* Contributor card START ________  -->
-
-        <div class="card">
-          <p class="name">Oluwatobi Salawu</p>
-          <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://x.com/SalawuToby/" target="_blank">SalawuToby</a>
-            <i class="fab fa-github"></i>
-            <a href="https://www.github.com/tobilobasalawu" target="_blank">tobilobasalawu</a>
-          </p>
-          <p class="about">I'm Oluwatobi Salawu, a Junior Software & Frontend Developer (In Training) .Improving my knowledge on Python and JavaScript. Currently searching for an internship or apprenticeship to build my career as a software developer.
-          </p>
-          <div class="resources">
-            <p>3 Useful Dev Resources</p>
-            <ul>
-              <li>
-                <a href="https://youtu.be/XKHEtdqhLK8?si=ItMvKLIolcXm2D2a" target="_blank" title="Bro Code Python course on (YouTube)">Bro Code Python course - (YouTube)</a>
-              </li>
-              <li>
-                <a href="https://www.w3schools.com/python/default.asp" target="_blank" title="W3Schools Python Course with resources">W3Schools Python Course</a>
-              </li>
-              <li>
-                <a href="https://youtu.be/EerdGm-ehJQ?si=1RxvB3QMr3tIPWx3" target="_blank" title="SuperSimpleDev JavaScript Course on Youtube">SuperSimpleDev JavaScript Course</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <!-- ________ *tobilobasalawu* Contributor card END ________  -->
-
-
-        <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
-        <div class="card">
-          <p class="name">Faruk Idris</p>
-          <p class="contact">
-            <i class="fab fa-github"></i>
-            <a href="https://github.com/farukidris" target="_blank">Faruk Idris</a>
-          </p>
-          <p class="about">Hi, I'm Faruk. I love coding and contributing to open source projects.</p>
-          <div class="resources">
-            <p>3 Useful Resources</p>
-            <ul>
-              <li>
-                <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">freeCodeCamp</a>
-              </li>
-              <li>
-                <a href="https://www.udemy.com/" target="_blank" title="Second Resource">Udemy</a>
-              </li>
-              <li>
-                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third Resource">Geeks for Geeks</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="card">
-          <p class="name">Shyam Bista</p>
-          <p class="contact">
-            <i class="fa-brands fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/shyam-bista-4119bb240/" target="_blank">Linkedin</a>
-            <i class="fab fa-github"></i>
-            <a href="https://github.com/shyambista123/" target="_blank">GitHub</a>
-          </p>
-          <p class="about">Software Developer</p>
-          <div class="resources">
-            <p>3 Useful Dev Resources</p>
-            <ul>
-              <li>
-                <a href="https://free-for.dev/" target="_blank" title="FreeForDev">Free For Dev</a>
-              </li>
-              <li>
-                <a href="https://www.datacamp.com/" target="_blank" title="DataCamp">DataCamp</a>
-              </li>
-              <li>
-                <a href="https://you.com/" target="_blank" title="You.com">You.com</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-
+          <!-- ________ *Oluwatobi Salawu* Contributor card START ________ -->
+    <div class="card">
+      <p class="name">Oluwatobi Salawu</p>
+      <p class="contact">
+        <i class="fab fa-x-twitter"></i>
+        <a href="https://x.com/SalawuToby/" target="_blank">SalawuToby</a>
+        <i class="fab fa-github"></i>
+        <a href="https://www.github.com/tobilobasalawu" target="_blank">tobilobasalawu</a>
+      </p>
+      <p class="about">I'm Oluwatobi Salawu, a Junior Software & Frontend Developer (In Training). Improving my knowledge on Python and JavaScript. Currently searching for an internship or apprenticeship to build my career as a software developer.</p>
+      <div class="resources">
+        <p>3 Useful Dev Resources</p>
+        <ul>
+          <li>
+            <a href="https://youtu.be/XKHEtdqhLK8?si=ItMvKLIolcXm2D2a" target="_blank" title="Bro Code Python course on YouTube">Bro Code Python course - (YouTube)</a>
+          </li>
+          <li>
+            <a href="https://www.w3schools.com/python/default.asp" target="_blank" title="W3Schools Python Course with resources">W3Schools Python Course</a>
+          </li>
+          <li>
+            <a href="https://youtu.be/EerdGm-ehJQ?si=1RxvB3QMr3tIPWx3" target="_blank" title="SuperSimpleDev JavaScript Course on Youtube">SuperSimpleDev JavaScript Course</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- ________ *Oluwatobi Salawu* Contributor card END ________ -->
+    
+    <!-- ________ *Faruk Idris* Contributor card START ________ -->
+    <div class="card">
+      <p class="name">Faruk Idris</p>
+      <p class="contact">
+        <i class="fab fa-github"></i>
+        <a href="https://github.com/farukidris" target="_blank">Faruk Idris</a>
+      </p>
+      <p class="about">Hi, I'm Faruk. I love coding and contributing to open source projects.</p>
+      <div class="resources">
+        <p>3 Useful Resources</p>
+        <ul>
+          <li>
+            <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">freeCodeCamp</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/" target="_blank" title="Second Resource">Udemy</a>
+          </li>
+          <li>
+            <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third Resource">Geeks for Geeks</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- ________ *Faruk Idris* Contributor card END ________ -->
+    
+    <!-- ________ *Shyam Bista* Contributor card START ________ -->
+    <div class="card">
+      <p class="name">Shyam Bista</p>
+      <p class="contact">
+        <i class="fab fa-github"></i>
+        <a href="https://github.com/shyambista" target="_blank">Shyam Bista</a>
+      </p>
+      <p class="about">Hi, I'm Shyam Bista, a Full Stack Developer.</p>
+      <div class="resources">
+        <p>3 Useful Resources</p>
+        <ul>
+          <li>
+            <a href="https://www.freecodecamp.org/" target="_blank" title="First Resource">freeCodeCamp</a>
+          </li>
+          <li>
+            <a href="https://www.udemy.com/" target="_blank" title="Second Resource">Udemy</a>
+          </li>
+          <li>
+            <a href="https://www.geeksforgeeks.org/" target="_blank" title="Third Resource">Geeks for Geeks</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <!-- ________ *Shyam Bista* Contributor card END ________ -->
         <!-- ________ *A T M FOKRULE HASAN:* Contributor card START ________  -->
         <div class="card">
           <p class="name">A T M FOKRULE HASAN</p>
