--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <a href="https://youtu.be/XKHEtdqhLK8?si=ItMvKLIolcXm2D2a" target="_blank" title="Bro Code Python course on YouTube">Bro Code Python course - (YouTube)</a>
           </li>
           <li>
-            <a href="https://www.w3schools.com/python/default.asp" target="_blank" title="W3Schools Python Course with resources">W3Schools Python Course</a>
+            <a href="https://www.w3schools.com/python/default.asp" target="_blank" title="W3Schools Python Course with resources">W3Schools Python Resource</a>
           </li>
           <li>
             <a href="https://youtu.be/EerdGm-ehJQ?si=1RxvB3QMr3tIPWx3" target="_blank" title="SuperSimpleDev JavaScript Course on Youtube">SuperSimpleDev JavaScript Course</a>
