--- a/index.html
+++ b/index.html
@@ -116,6 +116,34 @@
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+                <!-- ________ Brian Ali card Start ________  -->
+                  <div class="card">
+                    <p class="name">Brian Ali</p>
+                    <p class="contact">
+                      <i class="fab fa-x-twitter"></i>
+                      <a href="https://x.com/BrianAli427" target="_blank">@BrianAli427</a>
+                      <i class="fab fa-github"></i>
+                      <a href="https://github.com/gamerfunky78" target="_blank">gamerfunky78</a>
+                      <i class="fa-brands fa-linkedin"></i>
+                      <a href="https://www.linkedin.com/in/brian-ali/" target="_blank">BrianAli</a>
+                    </p>
+                    <p class="about">An It student in Mt kenya University seeking a community full of fellow like minded people, check out my portfolio at (gamerfunky78.github.io).</p>
+                    <div class="resources">
+                      <p>3 Useful Dev Resources</p>
+                      <ul>
+                        <li>
+                          <a href="https://www.theodinproject.com/" target="_blank" title="First Resource">The Odin Project</a>
+                        </li>
+                        <li>
+                          <a href="https://www.freecodecamp.org/" target="_blank" title="Third resource">Free Code Camp</a>
+                        </li>
+                        <li>
+                          <a href="https://www.w3schools.com/" target="_blank" title="Second Resource">W3Schools</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                <!-- ________ Brian Ali card END ________  -->
 
                 <!-- ________ Ann Mukami card START ________  -->
                 <div class="card">
