Add jason41391 card info

--- a/index.html
+++ b/index.html
@@ -88,25 +88,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Jason4139</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.twitter.com/jason4139242626" target="_blank">@jason4139242626</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/jason41391" target="_blank">jason41391</a>
           </p>
           <p class="about">about you</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://zh.wikipedia.org/zh-tw/Wikipedia:首页" target="_blank" title="First Resource">WikiPedia</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://www.geeksforgeeks.org" target="_blank" title="Second Resource">GEEKSFORGEEKS</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://stackoverflow.com" target="_blank" title="Third resource">Stack Overflow</a>
               </li>
             </ul>
           </div>
