--- a/index.html
+++ b/index.html
@@ -116,6 +116,32 @@
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+                    <!--Kunle copy start here-->
+      <div class="card">
+        <p class="name">Olaoye kunle</p>
+        <p class="contact">
+          <i class="fab fa-x-twitter"></i>
+          <a href="https://x.com/KunleFestus" target="_blank">KunleFestus</a>
+          <i class="fab fa-github"></i>
+          <a href="https://www.github.com/kunle1984" target="_blank">kunle1984</a>
+        </p>
+        <p class="about">A fullstack developer with passion for creativity and innovation</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://stackoverflow.com/" target="_blank" title="stack overflow">Stack overflow</a>
+            </li>
+            <li>
+              <a href="https://w3schools.com/" target="_blank" title="W3schools">W3schools</a>
+            </li>
+            <li>
+              <a href="https://www.freecodecamp.org/" target="_blank" title="Free code camp">Free code camp</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+                <!--------------Kunle's copy ends here------------------>
                 <!-- ________ Brian Ali card Start ________  -->
                   <div class="card">
                     <p class="name">Brian Ali</p>
