--- a/index.html
+++ b/index.html
@@ -112,10 +112,39 @@
           </div>
         </div>
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
+  
 
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+                      <!-- Shreya Berlikar Start here -->
+                      <div class="card">
+                        <p class="name">Shreya Berlikar</p>
+                        <p class="contact">
+                          <i class="fab fa-instagram"></i>
+                          <a href="https://www.instagram.com/shreyaberlikar" target="_blank">shreyaberlikar</a>
+                          <i class="fab fa-linkedin"></i>
+                          <a href="https://www.linkedin.com/in/shreya-berlikar" target="_blank">Shreya Berlikar</a>
+                        </p>
+                        <p class="about">I am interested in learning the fundamentals of web design and development, currently learning HTML, CSS, and JavaScript. I'm also looking to collaborate on beginner-friendly projects.</p>
+                        <div class="resources">
+                          <p>3 Useful Dev Resources</p>
+                          <ul>
+                            <li>
+                              <a href="https://developer.mozilla.org/en-US/" target="_blank" title="MDN Web Docs">MDN Web Docs</a>
+                            </li>
+                            <li>
+                              <a href="https://www.w3schools.com/" target="_blank" title="W3Schools">W3Schools</a>
+                            </li>
+                            <li>
+                              <a href="https://css-tricks.com/" target="_blank" title="CSS-Tricks">CSS-Tricks</a>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
+
+                      <!-- Shreya Berlikar Ends here  --> 
                 <!-- ________ Brian Ali card Start ________  -->
                   <div class="card">
                     <p class="name">Brian Ali</p>
