--- a/index.html
+++ b/index.html
@@ -111,11 +111,38 @@
             </ul>
           </div>
         </div>
+        
         <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+       <!-- ________ Rishabh Gupta Card START ________  -->
+       <div class="card">
+        <p class="name">Rishabh Gupta</p>
+        <p class="contact">
+          <i class="fab fa-x-twitter"></i>
+          <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+          <i class="fab fa-github"></i>
+          <a href="https://www.github.com/MasterSINISTER" target="_blank">Github</a>
+        </p>
+        <p class="about">Full-stack developer and technical leader is driven by a passion for problem-solving and continuous learning.</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="#" target="_blank" title="First Resource">GeeksForGeeks</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" title="Second Resource">Daily.dev</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" title="Third resource">Medium</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
                 <!-- ________ Brian Ali card Start ________  -->
                   <div class="card">
                     <p class="name">Brian Ali</p>
