--- a/index.html
+++ b/index.html
@@ -116,6 +116,34 @@
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+      <!-- ________ Yassin Ali card START ________  -->
+      <div class="card">
+        <p class="name">Yassin Ali</p>
+        <p class="contact">
+          <i class="fab fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/yassin-ali-10497a252" target="_blank">Yassin Ali</a>
+          <i class="fab fa-github"></i>
+          <a href="https://www.github.com/YassenAli" target="_blank">YassenAli</a>
+        </p>
+        <p class="about">I love to learn something new every single day.</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://www.geeksforgeeks.org/" target="_blank" title="GeeksForGeeks">GeeksForGeeks</a>
+            </li>
+            <li>
+              <a href="https://stackoverflow.com/" target="_blank" title="stack overflow">Stack overflow</a>
+            </li>
+            <li>
+              <a href="https://w3schools.com/" target="_blank" title="W3schools">W3schools</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- ________ Yassin Ali card END ________  -->
+
                     <!--Kunle copy start here-->
       <div class="card">
         <p class="name">Olaoye kunle</p>
