--- a/index.html
+++ b/index.html
@@ -88,25 +88,26 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Your name</p>
+          <p class="name">Emerson</p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://twitter.com/EmersonAlAl" target="_blank">@EmersonAlAl</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://github.com/EmersonCR719" target="_blank">EmersonCR719</a>
           </p>
-          <p class="about">about you</p>
+          <p class="about">Hello, I'm a student from Colombia and I'm very exicted about programing and I learn Java, Python and Spring Boot. Bye :p</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="#" target="_blank" title="First Resource">Resource 1</a>
+                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#reserved_words" target="_blank" title="First Resource">Resources for Developers,
+                  by Developers</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Second Resource">Resource 2</a>
+                <a href="https://blog.cleancoder.com/" target="_blank" title="Second Resource">The Clean Code Blog</a>
               </li>
               <li>
-                <a href="#" target="_blank" title="Third resource">Resource 3</a>
+                <a href="https://andybrewer.github.io/mvp/" target="_blank" title="Third resource">A minimalist stylesheet for HTML elements</a>
               </li>
             </ul>
           </div>
