--- a/index.html
+++ b/index.html
@@ -116,6 +116,32 @@
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+       <!-- ________ mobin card START ________  -->
+       <div class="card">
+        <p class="name">Mobin Shahidi</p>
+        <p class="contact">
+          <i class="fa-brands fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/mobinshahidi/" target="_blank">mobinshahidi</a>
+          <i class="fab fa-github"></i>
+          <a href="https://www.github.com/Mobinshahidi" target="_blank">Mobinshahidi</a>
+        </p>
+        <p class="about">I am Mobin , 20 years old self-taught front-end developer.</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://www.edclub.com/sportal/" target="_blank" title="First Resource">Practice Typing</a>
+            </li>
+            <li>
+              <a href="https://getwaves.io" target="_blank" title="Second Resource">Create Waves</a>
+            </li>
+            <li>
+              <a href="https://www.frontendmentor.io" target="_blank" title="Third resource">Front-End Mentor</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- ________ mobin card END ________  -->
                     <!--Kunle copy start here-->
       <div class="card">
         <p class="name">Olaoye kunle</p>
