Add MohamadDasuki card info

--- a/index.html
+++ b/index.html
@@ -116,7 +116,36 @@
 
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
-      <!-- ========= Paste YOUR CARD directly BELOW this line ========= --><!-- Shreya Berlikar Start here -->
+      <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+      
+      <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+      <div class="card">
+        <p class="name">Mohamad Dasuki</p>
+        <p class="contact">
+          <i class="fab fa-x-twitter"></i>
+          <a href="https://x.com/mohamad_dasuki" target="_blank">@mohamad_dasuki</a>
+          <i class="fab fa-github"></i>
+          <a href="https://github.com/MohamadDasuki" target="_blank">@MohamadDasuki</a>
+        </p>
+        <p class="about">I'm a Computer Engineer</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://github.com/codecrafters-io/build-your-own-x" target="_blank" title="First Resource">Great Github Repo</a>
+            </li>
+            <li>
+              <a href="https://www.keysight.com/us/en/learn/course.high-speed-oscilloscope-basics.html" target="_blank" title="Second Resource">Keysight high-speed oscilloscope basics</a>
+            </li>
+            <li>
+              <a href="https://www.circuitlab.com/" target="_blank" title="Third resource">Great online circuit simulator</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
+      <!-- Shreya Berlikar Start here -->
                   <div class="card">
                     <p class="name">Shreya Berlikar</p>
                     <p class="contact">
