--- a/index.html
+++ b/index.html
@@ -88,26 +88,25 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
-          <p class="name">Emerson</p>
+          <p class="name"></p>
           <p class="contact">
             <i class="fab fa-x-twitter"></i>
-            <a href="https://twitter.com/EmersonAlAl" target="_blank">@EmersonAlAl</a>
+            <a href="https://twitter.com/user" target="_blank"></a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/EmersonCR719" target="_blank">EmersonCR719</a>
+            <a href="https://github.com/user" target="_blank"></a>
           </p>
-          <p class="about">Hello, I'm a student from Colombia and I'm very exicted about programing and I learn Java, Python and Spring Boot. Bye :p</p>
+          <p class="about"></p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#reserved_words" target="_blank" title="First Resource">Resources for Developers,
-                  by Developers</a>
+                <a href="#" target="_blank" title="First Resource"></a>
               </li>
               <li>
-                <a href="https://blog.cleancoder.com/" target="_blank" title="Second Resource">The Clean Code Blog</a>
+                <a href="#" target="_blank" title="Second Resource"></a>
               </li>
               <li>
-                <a href="https://andybrewer.github.io/mvp/" target="_blank" title="Third resource">A minimalist stylesheet for HTML elements</a>
+                <a href="#" target="_blank" title="Third resource"></a>
               </li>
             </ul>
           </div>
@@ -117,6 +116,33 @@
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+                        <!--Kunle copy start here-->
+      <div class="card">
+        <p class="name">Emerson</p>
+        <p class="contact">
+          <i class="fab fa-x-twitter"></i>
+          <a href="https://twitter.com/EmersonAlAl" target="_blank">@EmersonAlAl</a>
+          <i class="fab fa-github"></i>
+          <a href="https://github.com/EmersonCR719" target="_blank">EmersonCR719</a>
+        </p>
+        <p class="about">Hello, I'm a student from Colombia and I'm very exicted about programing and I learn Java, Python and Spring Boot. Bye :p</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Lexical_grammar#reserved_words" target="_blank" title="First Resource">Resources for Developers,
+                by Developers</a>
+            </li>
+            <li>
+              <a href="https://blog.cleancoder.com/" target="_blank" title="Second Resource">The Clean Code Blog</a>
+            </li>
+            <li>
+              <a href="https://andybrewer.github.io/mvp/" target="_blank" title="Third resource">A minimalist stylesheet for HTML elements</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+          <!--------------Kunle's copy ends here------------------>
                     <!--Kunle copy start here-->
       <div class="card">
         <p class="name">Olaoye kunle</p>
