--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-                        <!--Kunle copy start here-->
+                        <!--Emerson copy start here-->
       <div class="card">
         <p class="name">Emerson</p>
         <p class="contact">
@@ -142,7 +142,7 @@
           </ul>
         </div>
       </div>
-          <!--------------Kunle's copy ends here------------------>
+          <!--------------Emerson's copy ends here------------------>
                     <!--Kunle copy start here-->
       <div class="card">
         <p class="name">Olaoye kunle</p>
