--- a/index.html
+++ b/index.html
@@ -118,6 +118,33 @@
       <!-- Keep one line of space above and below your card -->
       <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________  qianqiu card START  ________  -->
+        <div class="card">
+          <p class="name">qianqiu</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/QianQiu0923" target="_blank">QianQiu0923</a>
+          </p>
+          <p class="about">about you</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://github.com/codecrafters-io/build-your-own-x" target="_blank" title="First Resource">Great Github Repo</a>
+              </li>
+              <li>
+                <a href="https://www.keysight.com/us/en/learn/course.high-speed-oscilloscope-basics.html" target="_blank" title="Second Resource">Keysight high-speed oscilloscope basics</a>
+              </li>
+              <li>
+                <a href="https://www.circuitlab.com/" target="_blank" title="Third resource">Great online circuit simulator</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ qianqiu card END ________  -->
+
       <!-- ________ Emerson card START ________  -->
       <div class="card">
                           <p class="name">Emerson</p>
