--- a/index.html
+++ b/index.html
@@ -889,6 +889,33 @@
       </div>
       <!-- ________ *shreyassn* Contributor card END ________  -->
 
+      <!-- ________ Narain Karthik Contributor card START ________  -->
+      <div class="card">
+        <p class="name">Narain Karthik</p>
+        <p class="contact">
+          <i class="fa-brands fa-linkedin"></i>
+          <a href="https://www.linkedin.com/in/narainkarthik-vellingiri/" target="_blank">narainkarthik-vellingiri</a>
+          <i class="fab fa-github"></i>
+          <a href="https://www.github.com/narainkarthikv" target="_blank">narainkarthikv</a>
+        </p>
+        <p class="about">I love Creative & Creating Stuffs ❤️</p>
+        <div class="resources">
+          <p>3 Useful Dev Resources</p>
+          <ul>
+            <li>
+              <a href="https://www.ko-fi.com/wisdomfox" target="_blank" title="First Resource">Ko-Fi</a>
+            </li>
+            <li>
+              <a href="https://getwaves.io" target="_blank" title="Second Resource">Create Waves</a>
+            </li>
+            <li>
+              <a href="https://www.frontendmentor.io" target="_blank" title="Third resource">Front-End Mentor</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- ________ Narain Karthik Contributor card END ________  -->
+
       <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
       <div class="card">
         <p class="name">wviie</p>
@@ -2685,6 +2712,7 @@
         </div>
       </div>
       <!-- ========= Card 17 END =========  -->
+
       <!-- ========= Card 18 START =========  -->
       <div class="card">
            
