paragraph background color

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               </a>
               <script async="" src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
-            <p>Contributions so far...</p>
+            <p style="background-color: blue;">ontributions so far...</p>
             <div class="animated" id="contributions-number">0</div>
           </div>
         </div>
