--- a/index.html
+++ b/index.html
@@ -227,6 +227,8 @@
 
       <!-- ________ Jason card START ________  -->
       <div class="card">
+        <p class="name">Jason Chang</p>
+        <p class="contact">
         <i class="fab fa-x-twitter"></i>
         <a href="https://x.com/jason139414" target="_blank">Jason Chang</a>
         <i class="fab fa-github"></i>
