Add K-dash card info

--- a/index.html
+++ b/index.html
@@ -121,6 +121,32 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+        <div class="card">
+          <p class="name">𝕂'</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://www.twitter.com/inetcpl" target="_blank">𝕂'</a>
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/K-dash" target="_blank">𝕂'</a>
+          </p>
+          <p class="about">I am a software development engineer in Japan. 🇯🇵 🐍 🦀</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://qiita.com/" target="_blank" title="Qiita">Qiita</a>
+              </li>
+              <li>
+                <a href="https://zenn.dev/" target="_blank" title="Zenn">Zenn</a>
+              </li>
+              <li>
+                <a href="https://medium.com/" target="_blank" title="Medium">Medium</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ========= START ========= -->
 
