--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
-         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+         <!-- ________ 𝕂' card START ________  -->
         <div class="card">
           <p class="name">𝕂'</p>
           <p class="contact">
@@ -146,7 +146,7 @@
             </ul>
           </div>
         </div>
-        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+        <!-- ________ 𝕂' card END ________  -->
 
         <!-- ========= START ========= -->
 
