Added Card Information

--- a/index.html
+++ b/index.html
@@ -122,6 +122,31 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <div class="card">
+          <p class="name">Alex</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="www.linkedin.com/in/alexandra-alex-doyle" target="_blank">Alexandra Doyle</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/bunny4502" target="_blank">bunny4502</a>
+          </p>
+          <p class="about">I am a self-taught beginner, currently coding as a hobby but hoping to one day become a web developer. I hope to inspire more women to learn and try coding.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.codecademy.com/learn" target="_blank" title="First Resource">codecademy: can't recommend their lessons enough</a>
+              </li>
+              <li>
+                <a href="https://stackoverflow.com/" target="_blank" title="Second Resource">Stack Overflow: the reddit of web development help</a>
+              </li>
+              <li>
+                <a href="https://www.color-hex.com/color-palettes/" target="_blank" title="Third resource">color-hex.com: great place to find different hex colors to use for your projects</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
         <!-- ========= START ========= -->
 
         <!-- ========= Card 1 START =========  -->
