--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
       <div class="searchContainer">
         <input id="searchbar" type="search" name="search" placeholder="Search for your card here!" />
       </div>
+      
       <div class="grid" id="contributions">
         <!-- ================================================ -->
         <!-- ==================  TEMPLATE  ================== -->
@@ -121,6 +122,33 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+           <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
+           <div class="card">
+            <p class="name">Mohamad</p>
+            <p class="contact">
+              <i class="fab fa-x-twitter"></i>
+              <a href="https://x.com/MohmadSalmanDev" target="_blank">Your handle</a>
+              <i class="fab fa-github"></i>
+              <a href="https://github.com/MohamadSalman11" target="_blank">Your handle</a>
+            </p>
+            <p class="about">Hello, guys! 👋 I am Mohamad from Syria 🌍, and I am a web developer 💻. I'm very excited to start my first GitHub contribution 🚀.</p>
+            <div class="resources">
+              <p>3 Useful Dev Resources</p>
+              <ul>
+                <li>
+                  <a href="https://www.producthunt.com" target="_blank" title="First Resource">Resource 1</a>
+                </li>
+                <li>
+                  <a href="https://dribbble.com" target="_blank" title="Second Resource">Resource 2</a>
+                </li>
+                <li>
+                  <a href="https://leetcode.com" target="_blank" title="Third resource">Resource 3</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <!-- ________ *TEMPLATE* Contributor card END ________  -->
 
         <!-- ========= START ========= -->
 
