--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
             <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
             <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="https://www.github.com/LucdeVos1" target="_blank">LucdeVos1</a>
           </p>
           <p class="about">about you</p>
           <div class="resources">
