--- a/index.html
+++ b/index.html
@@ -151,6 +151,30 @@
 
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
+          <p class="name">Sufiyan Siddiqui</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://in.linkedin.com/in/mohd-sufiyan-siddiqui-343809227" target="_blank">Mohd-sufiyan</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/sufiyan-siddiqui233?tab=repositories" target="_blank">sufiyan-siddiqui233</a>
+          </p>
+          <p class="about">I am a full Stack Developer</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Qiita">Geeks For Geeks</a>
+              </li>
+              <li>
+                <a href="https://www.interviewbit.com/" target="_blank" title="Zenn">InterviewBit</a>
+              </li>
+              <li>
+                <a href="https://medium.com/" target="_blank" title="Medium">Medium</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
           <p class="name">Rudra Pratap Singh</p>
           <p class="contact">
             <i class="fa-brands fa-linkedin"></i>
