--- a/index.html
+++ b/index.html
@@ -668,5 +668,31 @@
         <span id="currentYear"></span>
       </footer>
     </div>
+<!-- ========= Card 12 Start =========  -->
+    <div class="card">
+      <p class="name">Abhishek Thakur</p>
+      <p class="contact">
+        <i class="fab fa-x-twitter"></i>
+        <a href="https://www.twitter.com/your_user_handle" target="_blank">Do not Have Account</a>
+        <i class="fab fa-github"></i>
+        <a href="https://www.github.com/your_user_handle" target="_blank">AbhishekThakur007</a>
+      </p>
+      <p class="about">about you</p>
+      <div class="resources">
+        <p>3 Useful Dev Resources</p>
+        <ul>
+          <li>
+            <a href="#" target="_blank" title="First Resource">Sublime</a>
+          </li>
+          <li>
+            <a href="#" target="_blank" title="Second Resource">Kaggle</a>
+          </li>
+          <li>
+            <a href="#" target="_blank" title="Third resource">CHATGPT</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+<!-- ========= Card 12 END =========  -->
   </body>
 </html>
