--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
           <p class="name">de_soot</p>
           <p class="contact">
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/de_soot" target="_blank">Github</a>
+            <a href="https://www.github.com/de-soot" target="_blank">Github</a>
           </p>
           <p class="about">Run-of-the-mill CS Student</p>
           <div class="resources">
