--- a/index.html
+++ b/index.html
@@ -122,6 +122,38 @@
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
+
+        <!-- ________ AMruth's card START ________  -->
+        
+
+        <div class="card">
+          <p class="name">Amruth L P</p>
+          <p class="contact">
+            <i class="fab fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/amruthlp" no-referrer target="_blank">Amruth L P</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/AmruthLP12" no-referrer target="_blank">AmruthLP12</a>
+          </p>
+          <p class="about">A passionate full stack developer from India</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://liveblocks.io/" target="_blank" title="First Resource">Liveblocks : Unlock collaboration in your product  </a>
+              </li>
+              <li>
+                <a href="https://clerk.com/" target="_blank" title="Second Resource">Clerk : The most comprehensive User Management Platform</a>
+              </li>
+              <li>
+                <a href="https://uiverse.io/" target="_blank" title="Third resource">UIVerse : The Largest Library of Open-Source UI</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- ________ Amruth's card END ________  -->
+
+
         <!-- ________ 𝕂' card START ________  -->
         <div class="card">
           <p class="name">𝕂'</p>
