--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <i class="fab fa-github"></i>
             <a href="https://github.com/RishabhRaj43" target="_blank">RishabhRaj43</a>
           </p>
-          <p class="about">I am a B.Tech Student just here for some contributions 🫶🏻</p>
+          <p class="about">I am a B.Tech Student just here for some contributions</p>
           <div class="resources">
             <p>3 Useful Dev Resources</p>
             <ul>
