--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
           </div>
         </div>
         <!-- ________ Rishabh card END ________  -->
+        <!-- ________ Joel's card Start ________  -->
        <div class="card">
           <p class="name">Joel Jolly</p>
           <p class="contact">
