--- a/index.html
+++ b/index.html
@@ -994,7 +994,6 @@
                   Frontend Developer Roadmap
                 </a>
               </li>
-
               <li>
                 <a href="https://css-tricks.com/" target="_blank" title="CSS-Tricks">CSS Tricks</a>
               </li>
@@ -1005,6 +1004,36 @@
           </div>
         </div>
         <!-- ========= Card 11 END =========  -->
+
+        <!-- ________ Viet's card ________  -->
+        <div class="card">
+          <p class="name">Viet Nguyen</p>
+          <p class="contact">
+            <i class="fab fa-x-twitter"></i>
+            <a href="https://twitter.com/vietanh15458684" target="_blank">Viet Anh Nguyen</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Viet281101" target="_blank">Viet281101</a>
+          </p>
+          <p class="about">
+            Passionate web, app & mobile developer (Angular, VueJS, Node, Django, Kotlin)
+            Likes to make mini games in free time using ThreeJS, CanvasJS, Pygame and Godot Engine.
+          </p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://www.spriters-resource.com/" target="_blank" title="First Resource">The Spriters Ressource</a>
+              </li>
+              <li>
+                <a href="https://opengameart.org/" target="_blank" title="Second Resource">OpenGameArt.org</a>
+              </li>
+              <li>
+                <a href="https://icons8.com/icons" target="_blank" title="Third resource">Free icons - Icons8</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ viet card END ________  -->
 
         <!-- ========= END ========= -->
 
