change name of card
change the name of the card dsg753

--- a/index.html
+++ b/index.html
@@ -153,8 +153,7 @@
               </div>
           </div>
           <!-- ________ Gl1tchblade card END ________  -->
-          
-    <!-- ========= dsg753 Card START =========  -->
+          <!-- ========= Georgi Card START =========  -->
           <div class="card">
               <p class="name">Georgi Stanchev</p>
               <p class="contact">
@@ -179,7 +178,7 @@
                   </ul>
               </div>
           </div>
-          <!-- ========= dsg753 Card END =========  -->
+          <!-- ========= Georgi Card END =========  -->
           <!-- ________ Rishabh card START ________  -->
           <div class="card">
               <p class="name">Rishabh Raj Verma</p>
