--- a/index.html
+++ b/index.html
@@ -123,6 +123,31 @@
         <!-- Keep one line of space above and below your card -->
         <!-- ========= Paste YOUR CARD directly BELOW this line ========= -->
 
+        <!-- ________ Blackedsoul card START ________  -->
+        <div class="card">
+          <p class="name">Blackedsoul</p>
+          <p class="contact">
+            <i class="fab fa-github"></i>
+            <a href="https://www.github.com/Blackedsoul" target="_blank">Blackedsoul</a>
+          </p>
+          <p class="about">Passion for coding from Italy</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href=https://www.perplexity.ai/" target="_blank" title="First resource">Perplexity</a>
+              </li>
+              <li>
+                <a href="http://www.google.com" target="_blank" title="Second resource">Google</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Third resource">FreeCodeCamp</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ Blackedsoul Contributor card END ________  -->
+
         <!-- ________ Gl1tchblade card START ________  -->
         <div class="card">
           <p class="name">Gl1tchblade</p>
