Add Jyothishree2k5 card info

--- a/index.html
+++ b/index.html
@@ -88,14 +88,41 @@
         <!-- ==================  TEMPLATE  ================== -->
         <!-- DO NOT modify the TEMPLATE directly, make a copy and paste it below -->
 
+        <!-- ________ *Jyothishree's card START ________  -->
+        <div class="card">
+          <p class="name">Jyothishree Rajkumar</p>
+          <p class="contact">
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="https://www.linkedin.com/in/jyothishree-rajkumar-055022243" target="_blank">jyothishree-rajkumar-055022243</a>
+            <i class="fab fa-github"></i>
+            <a href="https://github.com/Jyothishree2k5" target="_blank">Jyothishree2k5</a>
+          </p>
+          <p class="about">I would consider myself as a furious learner who is trying to think out of the box and move ahead of others. I like to read novels when I am bored and would love to play chess.</p>
+          <div class="resources">
+            <p>3 Useful Dev Resources</p>
+            <ul>
+              <li>
+                <a href="https://roadmap.sh/" target="_blank" title="Roadmaps for self learner">Roadmap</a>
+              </li>
+              <li>
+                <a href="https://www.freecodecamp.org/" target="_blank" title="Learn code for free">freeCodeCamp</a>
+              </li>
+              <li>
+                <a href="https://www.geeksforgeeks.org/" target="_blank" title="Learning Platform">Geeks for Geeks</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <!-- ________ *TEMPLATE* Contributor card END ________  -->
+
         <!-- ________ *TEMPLATE: MAKE A COPY* Contributor card START ________  -->
         <div class="card">
           <p class="name">Your name</p>
           <p class="contact">
-            <i class="fab fa-x-twitter"></i>
-            <a href="https://www.twitter.com/your_user_handle" target="_blank">Your handle</a>
+            <i class="fa-brands fa-linkedin"></i>
+            <a href="" target="_blank">Your handle</a>
             <i class="fab fa-github"></i>
-            <a href="https://www.github.com/your_user_handle" target="_blank">Your handle</a>
+            <a href="" target="_blank">Your handle</a>
           </p>
           <p class="about">about you</p>
           <div class="resources">
