bizougarn-ziyad card

--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
             <p>3 Useful Dev Resources</p>
             <ul>
               <li>
-                <a href="https://icons8.com/app/figma" target="_blank" title="First Resource">free icons website</a>
+                <a href="https://icons8.com/app/figma" target="_blank" title="First Resource">Icons8</a> - Free icons website.
               </li>
               <li>
-                <a href="https://www.freecodecamp.org/learn" target="_blank" title="Second Resource">freecodecamp to learn and get free certificates</a>
+                <a href="https://www.freecodecamp.org/learn" target="_blank" title="Second Resource">FreeCodeCamp</a> - To learn to code and get certificates.
               </li>
               <li>
-                <a href="https://readme.so/editor" target="_blank" title="Third resource">website to create your README.md file</a>
+                <a href="https://readme.so/editor" target="_blank" title="Third resource">ReadMe</a> - Website to create a README.md file for github.
               </li>
             </ul>
           </div>
