added name to handles

--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
           <p class="name">Pauleena</p>
           <p class="contact">
             <i class="fab fa-linkedin"></i>
-            <a href="https://www.linkedin.com/in/pauleena-phan " target="_blank">Your handle</a>
+            <a href="https://www.linkedin.com/in/pauleena-phan " target="_blank">Pauleena</a>
             <i class="fab fa-github"></i>
-            <a href="https://github.com/pauleenaphan" target="_blank">Your handle</a>
+            <a href="https://github.com/pauleenaphan" target="_blank">Pauleenaphan</a>
           </p>
           <p class="about">I recently graduated in May and am actively seeking full-time opportunities. I have a passion for web development 
             and am continuously improving my skills. This is my first contribution to an open-source project on GitHub</p>
